Add things to the clipboard

--- a/app/index.html
+++ b/app/index.html
@@ -13,7 +13,7 @@
       </section>
 
       <section class="content">
-        <div class="clippings-list"></div>
+        <div id="clippings-list" class="clippings-list"></div>
       </section>
     </div>
     <script>
